--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "homepage": "https://paulordbm.github.io",
   "dependencies": {
     "flow-bin": "0.59.0",
+    "font-awesome": "4.7.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-scripts": "1.0.17"
